# OpenSAK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  PRIVACY_POLICY.md  README.md  opensak.spec  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  improvement.yml
.github/workflows/: build.yml  ci.yml
docs/: CNAME  PRIVACY_POLICY.html  index.html
scripts/: install-opensak.sh  make_appdir.py
src/opensak/: __init__.py  app.py  config.py  coords.py
src/opensak/api/: __init__.py  geocaching.py
src/opensak/db/: database.py  models.py
src/opensak/filters/: engine.py
src/opensak/gps/: garmin.py
src/opensak/gui/: cache_detail.py  cache_table.py  mainwindow.py
src/opensak/gui/dialogs/: database_dialog.py  filter_dialog.py  found_dialog.py  gps_dialog.py  import_dialog.py  settings_dialog.py  trip_dialog.py  waypoint_dialog.py
src/opensak/importer/: __init__.py
src/opensak/lang/: __init__.py  cs.py  da.py  de.py  en.py  fr.py  pt.py  se.py
src/opensak/utils/: doctor.py  run_cli.py  run_test.py  types.py  utils.py
tests/: test_gui.py  test_languages.py
