[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensak"
version = "0.2.0"
description = "OpenSAK — Open Source geocaching management tool (GSAK successor)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "lxml>=5.0",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-qt",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
opensak = "opensak.utils.run_cli:main"
opensak-test = "opensak.utils.run_test:run"
opensak-doctor = "opensak.utils.doctor:run"